--- a/wedding/app/views/layouts/application.html.erb
+++ b/wedding/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag 'bootstrap.css', 'font.css' , 'homepage.css', 'jquery.maximage.css?v=1.2','screen.css?v=1.2' %>
+  <%= stylesheet_link_tag 'bootstrap.css', 'font.css' , 'homepage.css', 'jquery.maximage.css?v=1.2','screen.css?v=1.2', 'signup.css' %>
 </head>
 <body>
 <% if notice %>
@@ -15,6 +15,7 @@
   <p class="alert alert-danger"><%= alert %></p>
 <% end %>
 <%= yield %>
-<%= javascript_include_tag 'jquery-1.11.0.min.js', 'jquery.min.js', 'jquery.cycle.all.js', 'jquery.maximage.js','homepage.js','bootstrap.min.js' %>
+<%= javascript_include_tag 'jquery-1.11.0.min.js' ,'edit.js','jquery.min.js', 'jquery.cycle.all.js', 'jquery.maximage.js','homepage.js','bootstrap.min.js' %>
+<%= csrf_meta_tags %>
 </body>
 </html>
