--- a/wedding/app/assets/stylesheets/goods.css
+++ b/wedding/app/assets/stylesheets/goods.css
@@ -5,7 +5,7 @@ body
 	font-family:'B tabassom',tahoma;
 	font-size: 20px;
 }
-.navbar-fixed-top
+.wed-nav
 {
     background-color: #F4C2C2;
 }
@@ -50,7 +50,7 @@ background-color: #EFDECD;
 width:140px;
 text-align: auto;
 margin-left: auto;
-margin-right: 30%;	
+
 }	
 .btn{
 
