--- a/wedding/app/views/layouts/application.html.erb
+++ b/wedding/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag 'bootstrap.css', 'font.css' , 'homepage.css', 'jquery.maximage.css?v=1.2','screen.css?v=1.2' %>
+  <%= stylesheet_link_tag 'bootstrap.css', 'font.css' , 'homepage.css','goods.css', 'service.css', 'jquery.maximage.css?v=1.2','screen.css?v=1.2' %>
 </head>
 <body>
 <% if notice %>
