--- a/wedding/app/views/profiles/index.html.erb
+++ b/wedding/app/views/profiles/index.html.erb
@@ -14,42 +14,7 @@
     <div id="background">
       <img src="images/home.jpg" class="stretch" alt="" />
     </div>
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                       <span class="sr-only">Toggle navigation</span>
-                       <span class="icon-bar"></span>
-                       <span class="icon-bar"></span>
-                       <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="./profile.html">پروفایل ما</a>
-                </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="جست‌وجو">
-                        </div>
-                        <button type="submit" class="btn btn-default">پیدا کن!</button>
-                    </form>
-                    <ul class="nav navbar-nav navbar-right" >
-                        <li><a href="#">صفحه‌ی اصلی</a></li>
-                        <li><a href="./goods.html">خدمات</a></li>
-                        <li><a href="./forum.html">انجمن</a></li>  
-                        <li class="dropdown" id="test">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">عروسی ما <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                              <li><a href="./profile.html">پروفایل</a></li>
-                <li><a href="./messages.html">پیام‌ها</a></li>
-                <li><a href="trello.html">محیط برنامه‌ریزی</a></li>
-                                <li class="divider"></li>
-                <li><a href="homepage.html">خروج</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <%= render "layouts/navbar" , :locals => {:brand => "پروفایل ما"}%>
         <div class="jumbotron" id = "main-content">
             <div class = "row">
                 <div class="col-md-8">
