--- a/wedding/app/views/layouts/_navbar.html.erb
+++ b/wedding/app/views/layouts/_navbar.html.erb
@@ -21,7 +21,6 @@
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                               <!-- <li> <a <%= link_to "پروفایل" , 'profiles#current_user.profile.id' %>    </a> </li> -->
                             	<li><a href="#">پروفایل</a></li> 
 								<li><a href="#">پیام‌ها</a></li>
 								<li><a href="#">محیط برنامه‌ریزی</a></li>
@@ -33,5 +32,8 @@
                 
             </div>
         </nav>
+        <script type="text/javascript">
+            $('.dropdown-toggle').dropdown()
+        </script>
 
 
