--- a/wedding/app/views/welcome/index.html.erb
+++ b/wedding/app/views/welcome/index.html.erb
@@ -20,10 +20,9 @@
         <%= link_to image_tag ("8.jpg") %>
 		</div>
 		<div id="signup-nav">
-        <!--
             <div id = "start" >
                <span class="glyphicon glyphicon-chevron-right"></span>
-            </div> -->
+            </div> 
             <!--<li><%= link_to "Edit Account", new_user_session_path %></li> -->
              <div class="btn-group-vertical" id="start-btn">
              <!--
@@ -41,8 +40,6 @@
                  <a href="#" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#basicModal">
                  ورود
                  </a>
-                 
-                 <%= button_to  "ورود", new_user_session_path, :class => 'btn btn-sm btn-primary trans', :type=>'button', :id=>'sign_up_btns'  ,:method => :get%>
             </div>
         </div>
 
