--- a/wedding/app/views/layouts/_navbar.html.erb
+++ b/wedding/app/views/layouts/_navbar.html.erb
@@ -21,7 +21,7 @@
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                            	<li><a href="#">پروفایل</a></li> 
+                            	<li> <%= link_to "پروفایل ما", current_user.profile %></li>
 								<li><a href="#">پیام‌ها</a></li>
 								<li><a href="#">محیط برنامه‌ریزی</a></li>
                                 <li class="divider"></li>
