--- a/wedding/app/views/product_groups/show.html.erb
+++ b/wedding/app/views/product_groups/show.html.erb
@@ -10,7 +10,7 @@
 		<%= render "layouts/navbar" , :locals => {:brand => @brand} %>
        	<div class="jumbotron" id = "main-content">
             <div class="row">
-                <%= link_to image_tag ("23.jpg") ,{ :class => 'col-md-12 img-responsive' , :alt => 'Responsive image', :id => "prof-pic"}%>
+                <%= link_to image_tag ("37.jpg") ,{ :class => 'col-md-12 img-responsive' , :alt => 'Responsive image', :id => "prof-pic"}%>
             </div>
             <div class ="row">
 			<div class="panel panel-default">
@@ -22,10 +22,11 @@
 						<% @pros.each do |i| %>
 						<li class="list-group-item">
 			                <%= link_to image_tag (i.photo_album) ,{ :width => 150, :height => 100, :class => 'img-responsive' , :alt => 'Responsive image'}%>
-							</a>
-								<br/>
-						
-								<%= i.description %>
+								<br>
+								<%=truncate( i.description)%>
+								<br>
+								<br>
+								<%= link_to "جزییات" ,:controller => 'products',:action => 'show', :id => i.id %>
 						</li>
 					 	<% end %>
 					</ul>
