--- a/wedding/app/views/products/show.html.erb
+++ b/wedding/app/views/products/show.html.erb
@@ -1,14 +1,119 @@
-<p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html class='no-js' lang='en'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Information</title>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/information.css" rel="stylesheet">
+    <link href="css/font.css" rel="stylesheet">
+  </head>
+  <body>
+    <%= render "layouts/navbar" , :locals => {:brand => "خدمات"}%>
+        <div class="jumbotron" id = "main-content">
+            <div class = "row">
+                <div class="col-md-5">
+                    <div class="panel panel-danger" id ="box">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">
+                          <b>
+                       		<%=@product.name%>
+        </b>
+                            </h3>
+                        </div>
+                        <div class="panel-body">
+                          <p> 
+				<%=@product.description%>
+        </p>
+                        </div>
+                    </div>
+                </div>
+                <div class = "col-md-7">
+      <div id="carousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel" data-slide-to="1" ></li>
+          <li data-target="#carousel" data-slide-to="2" ></li>
+          <li data-target="#carousel" data-slide-to="3" ></li>  
+        </ol>
+        <div class="carousel-inner">
+          <div class="item active">
+            <%=link_to image_tag("17-2.jpg", :alt => "Slide1"), {:class => "img-responsive", :alt => "Responsive image"} %>       
+          </div>
+          <div class="item">
+            <%=link_to image_tag("9-2.jpg", :alt => "Slide2"), {:class => "img-responsive", :alt => "Responsive image"} %>
+          </div>
+          <div class="item">
+            <%=link_to image_tag("20-2.jpg", :alt => "Slide3"), {:class => "img-responsive", :alt => "Responsive image"} %>
+          </div>
+          <div class="item">
+            <%=link_to image_tag("10-2.jpg", :alt => "Slide4"), {:class => "img-responsive", :alt => "Responsive image"} %>
+          </div>
+        </div>
+        <a href="#carousel" class="left carousel-control" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a href="#carousel" class="right carousel-control" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+                  </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+              </div> 
+  </div>
 
-<p>
-  <strong>Photo album:</strong>
-  <%= @product.photo_album %>
-</p>
+<br>
+    <div class="btn-group ">
+            <button type="button" class="btn btn-default" id= "new-msg-btn" data-toggle="modal" data-target="#suggest-modal">
+  <b>پیشنهاد به دوستان</b>
+      </button>
+            <button type="button" class="btn btn-default" id="new-msg-btn">
+  <b>دوست نداشتم</b>
+      </button>
+            <button type="button" class="btn btn-default" id="new-msg-btn"> 
+  <b>دوست داشتم</b>
+      </button>
+        </div>
+        <hr>
+  <%= render :partial => '/comments/comment_product' , :locals =>{:com => @comments, :newCom => @newComment, :prod => @product}  %>
+       </div>
+  </div>
+        </div>
+  <div class="modal fade" id="suggest-modal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;
+      </button>
+                        <h4 class="modal-title" id="myModalLabel"><b>پیشنهاد این محصول به دوستان</b>
+      </h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class ="col-md-6">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="گیرنده">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-success">ارسال</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>     
+    <script src="https://code.jquery.com/jquery.js"></script>
+    
+        <script>
+            $("#carousel").carousel();
+        </script>
+  
+  </body>
+</html>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+
+
