--- a/wedding/app/views/layouts/_navbar.html.erb
+++ b/wedding/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,8 @@
                     <ul class="nav navbar-nav navbar-right" >
                         <li> <a <%= link_to "خدمات", product_groups_path %> </a> </li>
 <!--                        <li><a href="goods.html">خدمات</a></li> -->
-                        <li><a href="#">انجمن</a></li>  
+                        <li> <a <%= link_to "انجمن", forum_threads_path %> </a> </li>
+                          
                         <li class="dropdown" id="test">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">عروسی ما
                                 <b class="caret"></b>
