--- a/wedding/app/views/profiles/show.html.erb
+++ b/wedding/app/views/profiles/show.html.erb
@@ -47,23 +47,23 @@
   </head>
   <body id = "">
     <div id="profile_background">
-      <img src="images/home.jpg" class="stretch" alt="" />
-      <%= link_to image_tag ("home.jpg") , :class => "stretch" %>
+      <!--<%= link_to image_tag ("41.jpg") , :class => "stretch" %> -->
     </div>
         <%= render "layouts/navbar" , :locals => {:brand => "پروفایل ما"}%>
+        <br> <br>
         <div class="jumbotron" id = "profile_main-content">
             <div class = "row">
-                <div class="col-md-8">
+                <div class="col-md-9">
                     <div class="panel panel-danger" id ="box">
                         <div class="panel-heading">
                             <h3 class="panel-title row">
                                 <div class="col-md-5" id = "profile_desc">
-                                  <%= @profile.ceremonyDate %>
+                                  تاریخ ازدواج: <%= @profile.ceremonyDate %>
                                 </div>
-                                <div class="col-md-7" id="desc">
+                                <div class="col-md-7" id="desc"><b>
                                   <%= @profile.brideName %>
                                   <%= "و" %>
-                                  <%= @profile.groomName %>
+                                  <%= @profile.groomName %></b>
                                 </div>
 
                             </h3>
@@ -75,22 +75,25 @@
                          </div>
                     </div>
                 </div>
-                <div class = "col-md-4">
-                    <div class="container" id="profile_pic">
-                        <img src="images/ax.jpg" class="img-responsive" alt="Responsive image">
-                    </div>
+                <div class = "col-md-3" align="center">
+                    
+                        <%= link_to image_tag (@profile.photo)  %>
+                        
                 </div>
             </div>
             <br>
             <br>
-            <div class="row container">
+            <div class="row">
                 <a>
-                    <%= button_to  "ویرایش اطلاعات", edit_profile_path, :class => 'btn btn-primary', :type=>'button', :id=>'profile_new-msg-btn'  ,:method => :get%> </a>
+                <div class = "col-md-11">
+                    <%= button_to  "ویرایش اطلاعات", edit_profile_path, :class => 'btn btn-primary', :type=>'button',  :method => :get%> </a>
                     <!-- <a class="btn btn-primary" role="button" id ="new-msg-btn">ویرایش اطلاعات</a> 
                     <a class="btn btn-danger" role="button" > حذف حساب کاربری</a> -->
-
+                    </div>
+                    <div class = "col-md-1"
                 <a>
                     <%= button_to  "حذف حساب کاربری", edit_profile_path, :class => 'btn btn-primary', :type=>'button', :method => :get%> </a>
+                    </div>
             </div>
         </div>
         <script src="js/jquery.min.js"></script>
