--- a/wedding/app/views/layouts/_navbar.html.erb
+++ b/wedding/app/views/layouts/_navbar.html.erb
@@ -1,40 +1,30 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container-fluid wed-nav">
                     <a class="navbar-brand" href="information.html"><%= locals[:brand] %></a>
-                     <!--<%= form_tag '/home/search', :method => :get do%>
-                    <%= text_field_tag :q%>
-                    <%= submit_tag 'search'%>
+                    <%= form_tag '/welcome/search', :method => :get , :class => "navbar-form navbar-left"   do%>
+                    <%= text_field_tag :q , nil ,:class =>"form-control" , :placeholder => "جست‌وجو"%>
+                    <%= submit_tag 'پیدا کن!' , :class => "btn btn-default"%>
                     <%end%>
-                    -->
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="جست‌وجو">
-                        </div>
-                        <button type="submit" class="btn btn-default">پیدا کن!</button>
-                    </form>
+                    
                     <ul class="nav navbar-nav navbar-right" >
                         <li> <a <%= link_to "خدمات", product_groups_path %> </a> </li>
 <!--                        <li><a href="goods.html">خدمات</a></li> -->
-                        <li> <a <%= link_to "انجمن", forum_threads_path %> </a> </li>
                           
+                        <li> <a <%= link_to "انجمن", forum_threads_path %> </a> </li>
                         <li class="dropdown" id="test">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">عروسی ما
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                            	<li> <%= link_to "پروفایل ما", current_user.profile %></li>
-								<li><a href="#">پیام‌ها</a></li>
-								<li><a href="#">محیط برنامه‌ریزی</a></li>
+                                <li> <%= link_to "پروفایل ما", current_user.profile %></li>
+                                <li><a href="#">پیام‌ها</a></li>
+                                <li><a href="#">محیط برنامه‌ریزی</a></li>
                                 <li class="divider"></li>
-								<li><a href="#">خروج</a></li>
+                                <li><a href="#">خروج</a></li>
                             </ul>
                         </li>
                     </ul>
                 
             </div>
         </nav>
-        <script type="text/javascript">
-            $('.dropdown-toggle').dropdown()
-        </script>
-
 
